[gd_scene load_steps=3 format=4 uid="uid://tn7tnsad5fvd"]

[ext_resource type="Script" path="res://_tests/denis/scripts/MapSeeding.gd" id="1_fot5j"]
[ext_resource type="TileSet" uid="uid://xom4fx7km74v" path="res://_tests/denis/assets/Map_TileSet.tres" id="1_j5bv8"]

[node name="Map" type="Node2D"]
script = ExtResource("1_fot5j")

[node name="GroundTiles" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAEAAAAAAAAAAAABAAIAAAAAAAAAAAABAAMAAAAAAAAAAAABAAQAAAAAAAAAAAABAAUAAAAAAAAAAAABAAYAAAAAAAAAAAABAAcAAAAAAAAAAAABAAgAAAAAAAAAAAABAAkAAAAAAAAAAAABAAoAAAAAAAAAAAABAAsAAAAAAAAAAAABAAwAAAAAAAAAAAABAA0AAAAAAAAAAAABAA4AAAAAAAAAAAABAA8AAAAAAAAAAAABABAAAAAAAAAAAAABABEAAAAAAAAAAAABABIAAAAAAAAAAAABABMAAAAAAAAAAAABABQAAAAAAAAAAAABABUAAAAAAAAAAAABABYAAAAAAAAAAAABABcAAAAAAAAAAAABABgAAAAAAAAAAAABABkAAAAAAAAAAAABABoAAAAAAAAAAAABABsAAAAAAAAAAAABABwAAAAAAAAAAAABAB0AAAAAAAAAAAACAAEAAAAAAAAAAAACAAMAAAAAAAAAAAACAAUAAAAAAAAAAAACAAcAAAAAAAAAAAACAAkAAAAAAAAAAAACAAsAAAAAAAAAAAACAA0AAAAAAAAAAAACAA8AAAAAAAAAAAACABEAAAAAAAAAAAACABMAAAAAAAAAAAACABUAAAAAAAAAAAACABcAAAAAAAAAAAACABkAAAAAAAAAAAACABsAAAAAAAAAAAACAB0AAAAAAAAAAAADAAEAAAAAAAAAAAADAAIAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAADAAUAAAAAAAAAAAADAAYAAAAAAAAAAAADAAcAAAAAAAAAAAADAAgAAAAAAAAAAAADAAkAAAAAAAAAAAADAAoAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAAAAAADAA4AAAAAAAAAAAADAA8AAAAAAAAAAAADABAAAAAAAAAAAAADABEAAAAAAAAAAAADABIAAAAAAAAAAAADABMAAAAAAAAAAAADABQAAAAAAAAAAAADABUAAAAAAAAAAAADABYAAAAAAAAAAAADABcAAAAAAAAAAAADABgAAAAAAAAAAAADABkAAAAAAAAAAAADABoAAAAAAAAAAAADABsAAAAAAAAAAAADABwAAAAAAAAAAAADAB0AAAAAAAAAAAAEAAEAAAAAAAAAAAAEAAMAAAAAAAAAAAAEAAUAAAAAAAAAAAAEAAcAAAAAAAAAAAAEAAkAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAA0AAAAAAAAAAAAEAA8AAAAAAAAAAAAEABEAAAAAAAAAAAAEABMAAAAAAAAAAAAEABUAAAAAAAAAAAAEABcAAAAAAAAAAAAEABkAAAAAAAAAAAAEABsAAAAAAAAAAAAEAB0AAAAAAAAAAAAFAAEAAAAAAAAAAAAFAAIAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAQAAAAAAAAAAAAFAAUAAAAAAAAAAAAFAAYAAAAAAAAAAAAFAAcAAAAAAAAAAAAFAAgAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAFAA0AAAAAAAAAAAAFAA4AAAAAAAAAAAAFAA8AAAAAAAAAAAAFABAAAAAAAAAAAAAFABEAAAAAAAAAAAAFABIAAAAAAAAAAAAFABMAAAAAAAAAAAAFABQAAAAAAAAAAAAFABUAAAAAAAAAAAAFABYAAAAAAAAAAAAFABcAAAAAAAAAAAAFABgAAAAAAAAAAAAFABkAAAAAAAAAAAAFABoAAAAAAAAAAAAFABsAAAAAAAAAAAAFABwAAAAAAAAAAAAFAB0AAAAAAAAAAAAGAAEAAAAAAAAAAAAGAAMAAAAAAAAAAAAGAAUAAAAAAAAAAAAGAAcAAAAAAAAAAAAGAAkAAAAAAAAAAAAGAAsAAAAAAAAAAAAGAA0AAAAAAAAAAAAGAA8AAAAAAAAAAAAGABEAAAAAAAAAAAAGABMAAAAAAAAAAAAGABUAAAAAAAAAAAAGABcAAAAAAAAAAAAGABkAAAAAAAAAAAAGABsAAAAAAAAAAAAGAB0AAAAAAAAAAAAHAAEAAAAAAAAAAAAHAAIAAAAAAAAAAAAHAAMAAAAAAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAHAAYAAAAAAAAAAAAHAAcAAAAAAAAAAAAHAAgAAAAAAAAAAAAHAAkAAAAAAAAAAAAHAAoAAAAAAAAAAAAHAAsAAAAAAAAAAAAHAAwAAAAAAAAAAAAHAA0AAAAAAAAAAAAHAA4AAAAAAAAAAAAHAA8AAAAAAAAAAAAHABAAAAAAAAAAAAAHABEAAAAAAAAAAAAHABIAAAAAAAAAAAAHABMAAAAAAAAAAAAHABQAAAAAAAAAAAAHABUAAAAAAAAAAAAHABYAAAAAAAAAAAAHABcAAAAAAAAAAAAHABgAAAAAAAAAAAAHABkAAAAAAAAAAAAHABoAAAAAAAAAAAAHABsAAAAAAAAAAAAHABwAAAAAAAAAAAAHAB0AAAAAAAAAAAAIAAEAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAUAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAA0AAAAAAAAAAAAIAA8AAAAAAAAAAAAIABEAAAAAAAAAAAAIABMAAAAAAAAAAAAIABUAAAAAAAAAAAAIABcAAAAAAAAAAAAIABkAAAAAAAAAAAAIABsAAAAAAAAAAAAIAB0AAAAAAAAAAAAJAAEAAAAAAAAAAAAJAAIAAAAAAAAAAAAJAAMAAAAAAAAAAAAJAAQAAAAAAAAAAAAJAAUAAAAAAAAAAAAJAAYAAAAAAAAAAAAJAAcAAAAAAAAAAAAJAAgAAAAAAAAAAAAJAAkAAAAAAAAAAAAJAAoAAAAAAAAAAAAJAAsAAAAAAAAAAAAJAAwAAAAAAAAAAAAJAA0AAAAAAAAAAAAJAA4AAAAAAAAAAAAJAA8AAAAAAAAAAAAJABAAAAAAAAAAAAAJABEAAAAAAAAAAAAJABIAAAAAAAAAAAAJABMAAAAAAAAAAAAJABQAAAAAAAAAAAAJABUAAAAAAAAAAAAJABYAAAAAAAAAAAAJABcAAAAAAAAAAAAJABgAAAAAAAAAAAAJABkAAAAAAAAAAAAJABoAAAAAAAAAAAAJABsAAAAAAAAAAAAJABwAAAAAAAAAAAAJAB0AAAAAAAAAAAAKAAEAAAAAAAAAAAAKAAMAAAAAAAAAAAAKAAUAAAAAAAAAAAAKAAcAAAAAAAAAAAAKAAkAAAAAAAAAAAAKAAsAAAAAAAAAAAAKAA0AAAAAAAAAAAAKAA8AAAAAAAAAAAAKABEAAAAAAAAAAAAKABMAAAAAAAAAAAAKABUAAAAAAAAAAAAKABcAAAAAAAAAAAAKABkAAAAAAAAAAAAKABsAAAAAAAAAAAAKAB0AAAAAAAAAAAALAAEAAAAAAAAAAAALAAIAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAUAAAAAAAAAAAALAAYAAAAAAAAAAAALAAcAAAAAAAAAAAALAAgAAAAAAAAAAAALAAkAAAAAAAAAAAALAAoAAAAAAAAAAAALAAsAAAAAAAAAAAALAAwAAAAAAAAAAAALAA0AAAAAAAAAAAALAA4AAAAAAAAAAAALAA8AAAAAAAAAAAALABAAAAAAAAAAAAALABEAAAAAAAAAAAALABIAAAAAAAAAAAALABMAAAAAAAAAAAALABQAAAAAAAAAAAALABUAAAAAAAAAAAALABYAAAAAAAAAAAALABcAAAAAAAAAAAALABgAAAAAAAAAAAALABkAAAAAAAAAAAALABoAAAAAAAAAAAALABsAAAAAAAAAAAALABwAAAAAAAAAAAALAB0AAAAAAAAAAAAMAAEAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAUAAAAAAAAAAAAMAAcAAAAAAAAAAAAMAAkAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAA0AAAAAAAAAAAAMAA8AAAAAAAAAAAAMABEAAAAAAAAAAAAMABMAAAAAAAAAAAAMABUAAAAAAAAAAAAMABcAAAAAAAAAAAAMABkAAAAAAAAAAAAMABsAAAAAAAAAAAAMAB0AAAAAAAAAAAANAAEAAAAAAAAAAAANAAIAAAAAAAAAAAANAAMAAAAAAAAAAAANAAQAAAAAAAAAAAANAAUAAAAAAAAAAAANAAYAAAAAAAAAAAANAAcAAAAAAAAAAAANAAgAAAAAAAAAAAANAAkAAAAAAAAAAAANAAoAAAAAAAAAAAANAAsAAAAAAAAAAAANAAwAAAAAAAAAAAANAA0AAAAAAAAAAAANAA4AAAAAAAAAAAANAA8AAAAAAAAAAAANABAAAAAAAAAAAAANABEAAAAAAAAAAAANABIAAAAAAAAAAAANABMAAAAAAAAAAAANABQAAAAAAAAAAAANABUAAAAAAAAAAAANABYAAAAAAAAAAAANABcAAAAAAAAAAAANABgAAAAAAAAAAAANABkAAAAAAAAAAAANABoAAAAAAAAAAAANABsAAAAAAAAAAAANABwAAAAAAAAAAAANAB0AAAAAAAAAAAAOAAEAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAUAAAAAAAAAAAAOAAcAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAsAAAAAAAAAAAAOAA0AAAAAAAAAAAAOAA8AAAAAAAAAAAAOABEAAAAAAAAAAAAOABMAAAAAAAAAAAAOABUAAAAAAAAAAAAOABcAAAAAAAAAAAAOABkAAAAAAAAAAAAOABsAAAAAAAAAAAAOAB0AAAAAAAAAAAAPAAEAAAAAAAAAAAAPAAIAAAAAAAAAAAAPAAMAAAAAAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAPAAYAAAAAAAAAAAAPAAcAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAkAAAAAAAAAAAAPAAoAAAAAAAAAAAAPAAsAAAAAAAAAAAAPAAwAAAAAAAAAAAAPAA0AAAAAAAAAAAAPAA4AAAAAAAAAAAAPAA8AAAAAAAAAAAAPABAAAAAAAAAAAAAPABEAAAAAAAAAAAAPABIAAAAAAAAAAAAPABMAAAAAAAAAAAAPABQAAAAAAAAAAAAPABUAAAAAAAAAAAAPABYAAAAAAAAAAAAPABcAAAAAAAAAAAAPABgAAAAAAAAAAAAPABkAAAAAAAAAAAAPABoAAAAAAAAAAAAPABsAAAAAAAAAAAAPABwAAAAAAAAAAAAPAB0AAAAAAAAAAAAQAAEAAAAAAAAAAAAQAAMAAAAAAAAAAAAQAAUAAAAAAAAAAAAQAAcAAAAAAAAAAAAQAAkAAAAAAAAAAAAQAAsAAAAAAAAAAAAQAA0AAAAAAAAAAAAQAA8AAAAAAAAAAAAQABEAAAAAAAAAAAAQABMAAAAAAAAAAAAQABUAAAAAAAAAAAAQABcAAAAAAAAAAAAQABkAAAAAAAAAAAAQABsAAAAAAAAAAAAQAB0AAAAAAAAAAAARAAEAAAAAAAAAAAARAAIAAAAAAAAAAAARAAMAAAAAAAAAAAARAAQAAAAAAAAAAAARAAUAAAAAAAAAAAARAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAARAAwAAAAAAAAAAAARAA0AAAAAAAAAAAARAA4AAAAAAAAAAAARAA8AAAAAAAAAAAARABAAAAAAAAAAAAARABEAAAAAAAAAAAARABIAAAAAAAAAAAARABMAAAAAAAAAAAARABQAAAAAAAAAAAARABUAAAAAAAAAAAARABYAAAAAAAAAAAARABcAAAAAAAAAAAARABgAAAAAAAAAAAARABkAAAAAAAAAAAARABoAAAAAAAAAAAARABsAAAAAAAAAAAARABwAAAAAAAAAAAARAB0AAAAAAAAAAAASAAEAAAAAAAAAAAASAAMAAAAAAAAAAAASAAUAAAAAAAAAAAASAAcAAAAAAAAAAAASAAkAAAAAAAAAAAASAAsAAAAAAAAAAAASAA0AAAAAAAAAAAASAA8AAAAAAAAAAAASABEAAAAAAAAAAAASABMAAAAAAAAAAAASABUAAAAAAAAAAAASABcAAAAAAAAAAAASABkAAAAAAAAAAAASABsAAAAAAAAAAAASAB0AAAAAAAAAAAATAAEAAAAAAAAAAAATAAIAAAAAAAAAAAATAAMAAAAAAAAAAAATAAQAAAAAAAAAAAATAAUAAAAAAAAAAAATAAYAAAAAAAAAAAATAAcAAAAAAAAAAAATAAgAAAAAAAAAAAATAAkAAAAAAAAAAAATAAoAAAAAAAAAAAATAAsAAAAAAAAAAAATAAwAAAAAAAAAAAATAA0AAAAAAAAAAAATAA4AAAAAAAAAAAATAA8AAAAAAAAAAAATABAAAAAAAAAAAAATABEAAAAAAAAAAAATABIAAAAAAAAAAAATABMAAAAAAAAAAAATABQAAAAAAAAAAAATABUAAAAAAAAAAAATABYAAAAAAAAAAAATABcAAAAAAAAAAAATABgAAAAAAAAAAAATABkAAAAAAAAAAAATABoAAAAAAAAAAAATABsAAAAAAAAAAAATABwAAAAAAAAAAAATAB0AAAAAAAAAAAAUAAEAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAUAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAA0AAAAAAAAAAAAUAA8AAAAAAAAAAAAUABEAAAAAAAAAAAAUABMAAAAAAAAAAAAUABUAAAAAAAAAAAAUABcAAAAAAAAAAAAUABkAAAAAAAAAAAAUABsAAAAAAAAAAAAUAB0AAAAAAAAAAAAVAAEAAAAAAAAAAAAVAAIAAAAAAAAAAAAVAAMAAAAAAAAAAAAVAAQAAAAAAAAAAAAVAAUAAAAAAAAAAAAVAAYAAAAAAAAAAAAVAAcAAAAAAAAAAAAVAAgAAAAAAAAAAAAVAAkAAAAAAAAAAAAVAAoAAAAAAAAAAAAVAAsAAAAAAAAAAAAVAAwAAAAAAAAAAAAVAA0AAAAAAAAAAAAVAA4AAAAAAAAAAAAVAA8AAAAAAAAAAAAVABAAAAAAAAAAAAAVABEAAAAAAAAAAAAVABIAAAAAAAAAAAAVABMAAAAAAAAAAAAVABQAAAAAAAAAAAAVABUAAAAAAAAAAAAVABYAAAAAAAAAAAAVABcAAAAAAAAAAAAVABgAAAAAAAAAAAAVABkAAAAAAAAAAAAVABoAAAAAAAAAAAAVABsAAAAAAAAAAAAVABwAAAAAAAAAAAAVAB0AAAAAAAAAAAAWAAEAAAAAAAAAAAAWAAMAAAAAAAAAAAAWAAUAAAAAAAAAAAAWAAcAAAAAAAAAAAAWAAkAAAAAAAAAAAAWAAsAAAAAAAAAAAAWAA0AAAAAAAAAAAAWAA8AAAAAAAAAAAAWABEAAAAAAAAAAAAWABMAAAAAAAAAAAAWABUAAAAAAAAAAAAWABcAAAAAAAAAAAAWABkAAAAAAAAAAAAWABsAAAAAAAAAAAAWAB0AAAAAAAAAAAAXAAEAAAAAAAAAAAAXAAIAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAUAAAAAAAAAAAAXAAYAAAAAAAAAAAAXAAcAAAAAAAAAAAAXAAgAAAAAAAAAAAAXAAkAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAAAAAAAAAAXAA0AAAAAAAAAAAAXAA4AAAAAAAAAAAAXAA8AAAAAAAAAAAAXABAAAAAAAAAAAAAXABEAAAAAAAAAAAAXABIAAAAAAAAAAAAXABMAAAAAAAAAAAAXABQAAAAAAAAAAAAXABUAAAAAAAAAAAAXABYAAAAAAAAAAAAXABcAAAAAAAAAAAAXABgAAAAAAAAAAAAXABkAAAAAAAAAAAAXABoAAAAAAAAAAAAXABsAAAAAAAAAAAAXABwAAAAAAAAAAAAXAB0AAAAAAAAAAAAYAAEAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAUAAAAAAAAAAAAYAAcAAAAAAAAAAAAYAAkAAAAAAAAAAAAYAAsAAAAAAAAAAAAYAA0AAAAAAAAAAAAYAA8AAAAAAAAAAAAYABEAAAAAAAAAAAAYABMAAAAAAAAAAAAYABUAAAAAAAAAAAAYABcAAAAAAAAAAAAYABkAAAAAAAAAAAAYABsAAAAAAAAAAAAYAB0AAAAAAAAAAAAZAAEAAAAAAAAAAAAZAAIAAAAAAAAAAAAZAAMAAAAAAAAAAAAZAAQAAAAAAAAAAAAZAAUAAAAAAAAAAAAZAAYAAAAAAAAAAAAZAAcAAAAAAAAAAAAZAAgAAAAAAAAAAAAZAAkAAAAAAAAAAAAZAAoAAAAAAAAAAAAZAAsAAAAAAAAAAAAZAAwAAAAAAAAAAAAZAA0AAAAAAAAAAAAZAA4AAAAAAAAAAAAZAA8AAAAAAAAAAAAZABAAAAAAAAAAAAAZABEAAAAAAAAAAAAZABIAAAAAAAAAAAAZABMAAAAAAAAAAAAZABQAAAAAAAAAAAAZABUAAAAAAAAAAAAZABYAAAAAAAAAAAAZABcAAAAAAAAAAAAZABgAAAAAAAAAAAAZABkAAAAAAAAAAAAZABoAAAAAAAAAAAAZABsAAAAAAAAAAAAZABwAAAAAAAAAAAAZAB0AAAAAAAAAAAAaAAEAAAAAAAAAAAAaAAMAAAAAAAAAAAAaAAUAAAAAAAAAAAAaAAcAAAAAAAAAAAAaAAkAAAAAAAAAAAAaAAsAAAAAAAAAAAAaAA0AAAAAAAAAAAAaAA8AAAAAAAAAAAAaABEAAAAAAAAAAAAaABMAAAAAAAAAAAAaABUAAAAAAAAAAAAaABcAAAAAAAAAAAAaABkAAAAAAAAAAAAaABsAAAAAAAAAAAAaAB0AAAAAAAAAAAAbAAEAAAAAAAAAAAAbAAIAAAAAAAAAAAAbAAMAAAAAAAAAAAAbAAQAAAAAAAAAAAAbAAUAAAAAAAAAAAAbAAYAAAAAAAAAAAAbAAcAAAAAAAAAAAAbAAgAAAAAAAAAAAAbAAkAAAAAAAAAAAAbAAoAAAAAAAAAAAAbAAsAAAAAAAAAAAAbAAwAAAAAAAAAAAAbAA0AAAAAAAAAAAAbAA4AAAAAAAAAAAAbAA8AAAAAAAAAAAAbABAAAAAAAAAAAAAbABEAAAAAAAAAAAAbABIAAAAAAAAAAAAbABMAAAAAAAAAAAAbABQAAAAAAAAAAAAbABUAAAAAAAAAAAAbABYAAAAAAAAAAAAbABcAAAAAAAAAAAAbABgAAAAAAAAAAAAbABkAAAAAAAAAAAAbABoAAAAAAAAAAAAbABsAAAAAAAAAAAAbABwAAAAAAAAAAAAbAB0AAAAAAAAAAAAcAAEAAAAAAAAAAAAcAAMAAAAAAAAAAAAcAAUAAAAAAAAAAAAcAAcAAAAAAAAAAAAcAAkAAAAAAAAAAAAcAAsAAAAAAAAAAAAcAA0AAAAAAAAAAAAcAA8AAAAAAAAAAAAcABEAAAAAAAAAAAAcABMAAAAAAAAAAAAcABUAAAAAAAAAAAAcABcAAAAAAAAAAAAcABkAAAAAAAAAAAAcABsAAAAAAAAAAAAcAB0AAAAAAAAAAAAdAAEAAAAAAAAAAAAdAAIAAAAAAAAAAAAdAAMAAAAAAAAAAAAdAAQAAAAAAAAAAAAdAAUAAAAAAAAAAAAdAAYAAAAAAAAAAAAdAAcAAAAAAAAAAAAdAAgAAAAAAAAAAAAdAAkAAAAAAAAAAAAdAAoAAAAAAAAAAAAdAAsAAAAAAAAAAAAdAAwAAAAAAAAAAAAdAA0AAAAAAAAAAAAdAA4AAAAAAAAAAAAdAA8AAAAAAAAAAAAdABAAAAAAAAAAAAAdABEAAAAAAAAAAAAdABIAAAAAAAAAAAAdABMAAAAAAAAAAAAdABQAAAAAAAAAAAAdABUAAAAAAAAAAAAdABYAAAAAAAAAAAAdABcAAAAAAAAAAAAdABgAAAAAAAAAAAAdABkAAAAAAAAAAAAdABoAAAAAAAAAAAAdABsAAAAAAAAAAAAdABwAAAAAAAAAAAAdAB0AAAAAAAAAAAA=")
tile_set = ExtResource("1_j5bv8")

[node name="ObstacleTiles" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAAAAAkAAgAAAAAAAAAAAAoAAgAAAAAAAAAAAAsAAgAAAAAAAAAAAAwAAgAAAAAAAAAAAA0AAgAAAAAAAAAAAA4AAgAAAAAAAAAAAA8AAgAAAAAAAAAAABAAAgAAAAAAAAAAABEAAgAAAAAAAAAAABIAAgAAAAAAAAAAABMAAgAAAAAAAAAAABQAAgAAAAAAAAAAABUAAgAAAAAAAAAAABYAAgAAAAAAAAAAABcAAgAAAAAAAAAAABgAAgAAAAAAAAAAABkAAgAAAAAAAAAAABoAAgAAAAAAAAAAABsAAgAAAAAAAAAAABwAAgAAAAAAAAAAAB0AAgAAAAAAAAAAAB4AAgAAAAAAAAABAAAAAgAAAAAAAAABAB4AAgAAAAAAAAACAAAAAgAAAAAAAAACAB4AAgAAAAAAAAADAAAAAgAAAAAAAAADAB4AAgAAAAAAAAAEAAAAAgAAAAAAAAAEAB4AAgAAAAAAAAAFAAAAAgAAAAAAAAAFAB4AAgAAAAAAAAAGAAAAAgAAAAAAAAAGAB4AAgAAAAAAAAAHAAAAAgAAAAAAAAAHAB4AAgAAAAAAAAAIAAAAAgAAAAAAAAAIAB4AAgAAAAAAAAAJAAAAAgAAAAAAAAAJAB4AAgAAAAAAAAAKAAAAAgAAAAAAAAAKAB4AAgAAAAAAAAALAAAAAgAAAAAAAAALAB4AAgAAAAAAAAAMAAAAAgAAAAAAAAAMAB4AAgAAAAAAAAANAAAAAgAAAAAAAAANAB4AAgAAAAAAAAAOAAAAAgAAAAAAAAAOAB4AAgAAAAAAAAAPAAAAAgAAAAAAAAAPAB4AAgAAAAAAAAAQAAAAAgAAAAAAAAAQAB4AAgAAAAAAAAARAAAAAgAAAAAAAAARAB4AAgAAAAAAAAASAAAAAgAAAAAAAAASAB4AAgAAAAAAAAATAAAAAgAAAAAAAAATAB4AAgAAAAAAAAAUAAAAAgAAAAAAAAAUAB4AAgAAAAAAAAAVAAAAAgAAAAAAAAAVAB4AAgAAAAAAAAAWAAAAAgAAAAAAAAAWAB4AAgAAAAAAAAAXAAAAAgAAAAAAAAAXAB4AAgAAAAAAAAAYAAAAAgAAAAAAAAAYAB4AAgAAAAAAAAAZAAAAAgAAAAAAAAAZAB4AAgAAAAAAAAAaAAAAAgAAAAAAAAAaAB4AAgAAAAAAAAAbAAAAAgAAAAAAAAAbAB4AAgAAAAAAAAAcAAAAAgAAAAAAAAAcAB4AAgAAAAAAAAAdAAAAAgAAAAAAAAAdAB4AAgAAAAAAAAAeAAAAAgAAAAAAAAAeAAEAAgAAAAAAAAAeAAIAAgAAAAAAAAAeAAMAAgAAAAAAAAAeAAQAAgAAAAAAAAAeAAUAAgAAAAAAAAAeAAYAAgAAAAAAAAAeAAcAAgAAAAAAAAAeAAgAAgAAAAAAAAAeAAkAAgAAAAAAAAAeAAoAAgAAAAAAAAAeAAsAAgAAAAAAAAAeAAwAAgAAAAAAAAAeAA0AAgAAAAAAAAAeAA4AAgAAAAAAAAAeAA8AAgAAAAAAAAAeABAAAgAAAAAAAAAeABEAAgAAAAAAAAAeABIAAgAAAAAAAAAeABMAAgAAAAAAAAAeABQAAgAAAAAAAAAeABUAAgAAAAAAAAAeABYAAgAAAAAAAAAeABcAAgAAAAAAAAAeABgAAgAAAAAAAAAeABkAAgAAAAAAAAAeABoAAgAAAAAAAAAeABsAAgAAAAAAAAAeABwAAgAAAAAAAAAeAB0AAgAAAAAAAAAeAB4AAgAAAAAAAAACAAIAAgAAAAAAAAACAAQAAgAAAAAAAAACAAYAAgAAAAAAAAACAAgAAgAAAAAAAAACAAoAAgAAAAAAAAACAAwAAgAAAAAAAAACAA4AAgAAAAAAAAACABAAAgAAAAAAAAACABIAAgAAAAAAAAACABQAAgAAAAAAAAACABYAAgAAAAAAAAACABgAAgAAAAAAAAACABoAAgAAAAAAAAACABwAAgAAAAAAAAAEAAIAAgAAAAAAAAAEAAQAAgAAAAAAAAAEAAYAAgAAAAAAAAAEAAgAAgAAAAAAAAAEAAoAAgAAAAAAAAAEAAwAAgAAAAAAAAAEAA4AAgAAAAAAAAAEABAAAgAAAAAAAAAEABIAAgAAAAAAAAAEABQAAgAAAAAAAAAEABYAAgAAAAAAAAAEABgAAgAAAAAAAAAEABoAAgAAAAAAAAAEABwAAgAAAAAAAAAGAAIAAgAAAAAAAAAGAAQAAgAAAAAAAAAGAAYAAgAAAAAAAAAGAAgAAgAAAAAAAAAGAAoAAgAAAAAAAAAGAAwAAgAAAAAAAAAGAA4AAgAAAAAAAAAGABAAAgAAAAAAAAAGABIAAgAAAAAAAAAGABQAAgAAAAAAAAAGABYAAgAAAAAAAAAGABgAAgAAAAAAAAAGABoAAgAAAAAAAAAGABwAAgAAAAAAAAAIAAIAAgAAAAAAAAAIAAQAAgAAAAAAAAAIAAYAAgAAAAAAAAAIAAgAAgAAAAAAAAAIAAoAAgAAAAAAAAAIAAwAAgAAAAAAAAAIAA4AAgAAAAAAAAAIABAAAgAAAAAAAAAIABIAAgAAAAAAAAAIABQAAgAAAAAAAAAIABYAAgAAAAAAAAAIABgAAgAAAAAAAAAIABoAAgAAAAAAAAAIABwAAgAAAAAAAAAKAAIAAgAAAAAAAAAKAAQAAgAAAAAAAAAKAAYAAgAAAAAAAAAKAAgAAgAAAAAAAAAKAAoAAgAAAAAAAAAKAAwAAgAAAAAAAAAKAA4AAgAAAAAAAAAKABAAAgAAAAAAAAAKABIAAgAAAAAAAAAKABQAAgAAAAAAAAAKABYAAgAAAAAAAAAKABgAAgAAAAAAAAAKABoAAgAAAAAAAAAKABwAAgAAAAAAAAAMAAIAAgAAAAAAAAAMAAQAAgAAAAAAAAAMAAYAAgAAAAAAAAAMAAgAAgAAAAAAAAAMAAoAAgAAAAAAAAAMAAwAAgAAAAAAAAAMAA4AAgAAAAAAAAAMABAAAgAAAAAAAAAMABIAAgAAAAAAAAAMABQAAgAAAAAAAAAMABYAAgAAAAAAAAAMABgAAgAAAAAAAAAMABoAAgAAAAAAAAAMABwAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAgAAgAAAAAAAAAOAAoAAgAAAAAAAAAOAAwAAgAAAAAAAAAOAA4AAgAAAAAAAAAOABAAAgAAAAAAAAAOABIAAgAAAAAAAAAOABQAAgAAAAAAAAAOABYAAgAAAAAAAAAOABgAAgAAAAAAAAAOABoAAgAAAAAAAAAOABwAAgAAAAAAAAAQAAIAAgAAAAAAAAAQAAQAAgAAAAAAAAAQAAYAAgAAAAAAAAAQAAgAAgAAAAAAAAAQAAoAAgAAAAAAAAAQAAwAAgAAAAAAAAAQAA4AAgAAAAAAAAAQABAAAgAAAAAAAAAQABIAAgAAAAAAAAAQABQAAgAAAAAAAAAQABYAAgAAAAAAAAAQABgAAgAAAAAAAAAQABoAAgAAAAAAAAAQABwAAgAAAAAAAAASAAIAAgAAAAAAAAASAAQAAgAAAAAAAAASAAYAAgAAAAAAAAASAAgAAgAAAAAAAAASAAoAAgAAAAAAAAASAAwAAgAAAAAAAAASAA4AAgAAAAAAAAASABAAAgAAAAAAAAASABIAAgAAAAAAAAASABQAAgAAAAAAAAASABYAAgAAAAAAAAASABgAAgAAAAAAAAASABoAAgAAAAAAAAASABwAAgAAAAAAAAAUAAIAAgAAAAAAAAAUAAQAAgAAAAAAAAAUAAYAAgAAAAAAAAAUAAgAAgAAAAAAAAAUAAoAAgAAAAAAAAAUAAwAAgAAAAAAAAAUAA4AAgAAAAAAAAAUABAAAgAAAAAAAAAUABIAAgAAAAAAAAAUABQAAgAAAAAAAAAUABYAAgAAAAAAAAAUABgAAgAAAAAAAAAUABoAAgAAAAAAAAAUABwAAgAAAAAAAAAWAAIAAgAAAAAAAAAWAAQAAgAAAAAAAAAWAAYAAgAAAAAAAAAWAAgAAgAAAAAAAAAWAAoAAgAAAAAAAAAWAAwAAgAAAAAAAAAWAA4AAgAAAAAAAAAWABAAAgAAAAAAAAAWABIAAgAAAAAAAAAWABQAAgAAAAAAAAAWABYAAgAAAAAAAAAWABgAAgAAAAAAAAAWABoAAgAAAAAAAAAWABwAAgAAAAAAAAAYAAIAAgAAAAAAAAAYAAQAAgAAAAAAAAAYAAYAAgAAAAAAAAAYAAgAAgAAAAAAAAAYAAoAAgAAAAAAAAAYAAwAAgAAAAAAAAAYAA4AAgAAAAAAAAAYABAAAgAAAAAAAAAYABIAAgAAAAAAAAAYABQAAgAAAAAAAAAYABYAAgAAAAAAAAAYABgAAgAAAAAAAAAYABoAAgAAAAAAAAAYABwAAgAAAAAAAAAaAAIAAgAAAAAAAAAaAAQAAgAAAAAAAAAaAAYAAgAAAAAAAAAaAAgAAgAAAAAAAAAaAAoAAgAAAAAAAAAaAAwAAgAAAAAAAAAaAA4AAgAAAAAAAAAaABAAAgAAAAAAAAAaABIAAgAAAAAAAAAaABQAAgAAAAAAAAAaABYAAgAAAAAAAAAaABgAAgAAAAAAAAAaABoAAgAAAAAAAAAaABwAAgAAAAAAAAAcAAIAAgAAAAAAAAAcAAQAAgAAAAAAAAAcAAYAAgAAAAAAAAAcAAgAAgAAAAAAAAAcAAoAAgAAAAAAAAAcAAwAAgAAAAAAAAAcAA4AAgAAAAAAAAAcABAAAgAAAAAAAAAcABIAAgAAAAAAAAAcABQAAgAAAAAAAAAcABYAAgAAAAAAAAAcABgAAgAAAAAAAAAcABoAAgAAAAAAAAAcABwAAgAAAAAAAAA=")
tile_set = ExtResource("1_j5bv8")

[node name="ItemTiles" type="TileMapLayer" parent="."]
tile_set = ExtResource("1_j5bv8")

[node name="ShadowTiles" type="TileMapLayer" parent="."]
modulate = Color(0.415686, 0.4, 0.2, 0.14902)
tile_map_data = PackedByteArray("AAAAAP//BQAAAAAAAAABAP//BQAAAAAAAAACAP//BQAAAAAAAAADAP//BQAAAAAAAAAEAP//BQAAAAAAAAAFAP//BQAAAAAAAAAGAP//BQAAAAAAAAAHAP//BQAAAAAAAAAIAP//BQAAAAAAAAAJAP//BQAAAAAAAAAKAP//BQAAAAAAAAALAP//BQAAAAAAAAAMAP//BQAAAAAAAAANAP//BQAAAAAAAAAOAP//BQAAAAAAAAAPAP//BQAAAAAAAAAQAP//BQAAAAAAAAARAP//BQAAAAAAAAASAP//BQAAAAAAAAATAP//BQAAAAAAAAAUAP//BQAAAAAAAAAVAP//BQAAAAAAAAAWAP//BQAAAAAAAAAXAP//BQAAAAAAAAAYAP//BQAAAAAAAAAZAP//BQAAAAAAAAAaAP//BQAAAAAAAAAbAP//BQAAAAAAAAAcAP//BQAAAAAAAAAdAP//BQAAAAAAAAAeAP//BQAAAAAAAAACAAEABQAAAAAAAAAEAAEABQAAAAAAAAAGAAEABQAAAAAAAAAIAAEABQAAAAAAAAAKAAEABQAAAAAAAAAMAAEABQAAAAAAAAAOAAEABQAAAAAAAAAQAAEABQAAAAAAAAASAAEABQAAAAAAAAAUAAEABQAAAAAAAAAWAAEABQAAAAAAAAAYAAEABQAAAAAAAAAaAAEABQAAAAAAAAAcAAEABQAAAAAAAAACAAMABQAAAAAAAAAEAAMABQAAAAAAAAAGAAMABQAAAAAAAAAIAAMABQAAAAAAAAAKAAMABQAAAAAAAAAMAAMABQAAAAAAAAAOAAMABQAAAAAAAAAQAAMABQAAAAAAAAASAAMABQAAAAAAAAAUAAMABQAAAAAAAAAWAAMABQAAAAAAAAAYAAMABQAAAAAAAAAaAAMABQAAAAAAAAAcAAMABQAAAAAAAAACAAUABQAAAAAAAAAEAAUABQAAAAAAAAAGAAUABQAAAAAAAAAIAAUABQAAAAAAAAAKAAUABQAAAAAAAAAMAAUABQAAAAAAAAAOAAUABQAAAAAAAAAQAAUABQAAAAAAAAASAAUABQAAAAAAAAAUAAUABQAAAAAAAAAWAAUABQAAAAAAAAAYAAUABQAAAAAAAAAaAAUABQAAAAAAAAAcAAUABQAAAAAAAAACAAcABQAAAAAAAAAEAAcABQAAAAAAAAAGAAcABQAAAAAAAAAIAAcABQAAAAAAAAAKAAcABQAAAAAAAAAMAAcABQAAAAAAAAAOAAcABQAAAAAAAAAQAAcABQAAAAAAAAASAAcABQAAAAAAAAAUAAcABQAAAAAAAAAWAAcABQAAAAAAAAAYAAcABQAAAAAAAAAaAAcABQAAAAAAAAAcAAcABQAAAAAAAAACAAkABQAAAAAAAAAEAAkABQAAAAAAAAAGAAkABQAAAAAAAAAIAAkABQAAAAAAAAAKAAkABQAAAAAAAAAMAAkABQAAAAAAAAAOAAkABQAAAAAAAAAQAAkABQAAAAAAAAASAAkABQAAAAAAAAAUAAkABQAAAAAAAAAWAAkABQAAAAAAAAAYAAkABQAAAAAAAAAaAAkABQAAAAAAAAAcAAkABQAAAAAAAAACAAsABQAAAAAAAAAEAAsABQAAAAAAAAAGAAsABQAAAAAAAAAIAAsABQAAAAAAAAAKAAsABQAAAAAAAAAMAAsABQAAAAAAAAAOAAsABQAAAAAAAAAQAAsABQAAAAAAAAASAAsABQAAAAAAAAAUAAsABQAAAAAAAAAWAAsABQAAAAAAAAAYAAsABQAAAAAAAAAaAAsABQAAAAAAAAAcAAsABQAAAAAAAAACAA0ABQAAAAAAAAAEAA0ABQAAAAAAAAAGAA0ABQAAAAAAAAAIAA0ABQAAAAAAAAAKAA0ABQAAAAAAAAAMAA0ABQAAAAAAAAAOAA0ABQAAAAAAAAAQAA0ABQAAAAAAAAASAA0ABQAAAAAAAAAUAA0ABQAAAAAAAAAWAA0ABQAAAAAAAAAYAA0ABQAAAAAAAAAaAA0ABQAAAAAAAAAcAA0ABQAAAAAAAAACAA8ABQAAAAAAAAAEAA8ABQAAAAAAAAAGAA8ABQAAAAAAAAAIAA8ABQAAAAAAAAAKAA8ABQAAAAAAAAAMAA8ABQAAAAAAAAAOAA8ABQAAAAAAAAAQAA8ABQAAAAAAAAASAA8ABQAAAAAAAAAUAA8ABQAAAAAAAAAWAA8ABQAAAAAAAAAYAA8ABQAAAAAAAAAaAA8ABQAAAAAAAAAcAA8ABQAAAAAAAAACABEABQAAAAAAAAAEABEABQAAAAAAAAAGABEABQAAAAAAAAAIABEABQAAAAAAAAAKABEABQAAAAAAAAAMABEABQAAAAAAAAAOABEABQAAAAAAAAAQABEABQAAAAAAAAASABEABQAAAAAAAAAUABEABQAAAAAAAAAWABEABQAAAAAAAAAYABEABQAAAAAAAAAaABEABQAAAAAAAAAcABEABQAAAAAAAAACABMABQAAAAAAAAAEABMABQAAAAAAAAAGABMABQAAAAAAAAAIABMABQAAAAAAAAAKABMABQAAAAAAAAAMABMABQAAAAAAAAAOABMABQAAAAAAAAAQABMABQAAAAAAAAASABMABQAAAAAAAAAUABMABQAAAAAAAAAWABMABQAAAAAAAAAYABMABQAAAAAAAAAaABMABQAAAAAAAAAcABMABQAAAAAAAAACABUABQAAAAAAAAAEABUABQAAAAAAAAAGABUABQAAAAAAAAAIABUABQAAAAAAAAAKABUABQAAAAAAAAAMABUABQAAAAAAAAAOABUABQAAAAAAAAAQABUABQAAAAAAAAASABUABQAAAAAAAAAUABUABQAAAAAAAAAWABUABQAAAAAAAAAYABUABQAAAAAAAAAaABUABQAAAAAAAAAcABUABQAAAAAAAAACABcABQAAAAAAAAAEABcABQAAAAAAAAAGABcABQAAAAAAAAAIABcABQAAAAAAAAAKABcABQAAAAAAAAAMABcABQAAAAAAAAAOABcABQAAAAAAAAAQABcABQAAAAAAAAASABcABQAAAAAAAAAUABcABQAAAAAAAAAWABcABQAAAAAAAAAYABcABQAAAAAAAAAaABcABQAAAAAAAAAcABcABQAAAAAAAAACABkABQAAAAAAAAAEABkABQAAAAAAAAAGABkABQAAAAAAAAAIABkABQAAAAAAAAAKABkABQAAAAAAAAAMABkABQAAAAAAAAAOABkABQAAAAAAAAAQABkABQAAAAAAAAASABkABQAAAAAAAAAUABkABQAAAAAAAAAWABkABQAAAAAAAAAYABkABQAAAAAAAAAaABkABQAAAAAAAAAcABkABQAAAAAAAAACABsABQAAAAAAAAAEABsABQAAAAAAAAAGABsABQAAAAAAAAAIABsABQAAAAAAAAAKABsABQAAAAAAAAAMABsABQAAAAAAAAAOABsABQAAAAAAAAAQABsABQAAAAAAAAASABsABQAAAAAAAAAUABsABQAAAAAAAAAWABsABQAAAAAAAAAYABsABQAAAAAAAAAaABsABQAAAAAAAAAcABsABQAAAAAAAAABAB0ABQAAAAAAAAACAB0ABQAAAAAAAAADAB0ABQAAAAAAAAAEAB0ABQAAAAAAAAAFAB0ABQAAAAAAAAAGAB0ABQAAAAAAAAAHAB0ABQAAAAAAAAAIAB0ABQAAAAAAAAAJAB0ABQAAAAAAAAAKAB0ABQAAAAAAAAALAB0ABQAAAAAAAAAMAB0ABQAAAAAAAAANAB0ABQAAAAAAAAAOAB0ABQAAAAAAAAAPAB0ABQAAAAAAAAAQAB0ABQAAAAAAAAARAB0ABQAAAAAAAAASAB0ABQAAAAAAAAATAB0ABQAAAAAAAAAUAB0ABQAAAAAAAAAVAB0ABQAAAAAAAAAWAB0ABQAAAAAAAAAXAB0ABQAAAAAAAAAYAB0ABQAAAAAAAAAZAB0ABQAAAAAAAAAaAB0ABQAAAAAAAAAbAB0ABQAAAAAAAAAcAB0ABQAAAAAAAAAdAB0ABQAAAAAAAAA=")
tile_set = ExtResource("1_j5bv8")

[node name="PlayerTiles" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAWABcADgAAAAAAAAA=")
tile_set = ExtResource("1_j5bv8")
